// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard: Card matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="material-wizard__card mdc-layout-grid__inner mdc-layout-grid__cell--align-middle"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4"
        >
          <img
            alt=""
            src="http://example.com/image.png"
          />
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 mdc-layout-grid__cell--align-middle"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="material-wizard__card mdc-layout-grid__inner mdc-layout-grid__cell--align-middle"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4"
      >
        <img
          alt=""
          src="http://example.com/image.png"
        />
      </div>
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 mdc-layout-grid__cell--align-middle"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Wizard: Card matches snapshot when children is set 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="material-wizard__card mdc-layout-grid__inner mdc-layout-grid__cell--align-middle"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4"
        >
          <img
            alt=""
            src="http://example.com/image.png"
          />
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--align-middle"
        >
          <div>
            Example content
          </div>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--align-middle"
        >
          <div
            class="mdc-switch material-wizard-switch material-wizard-switch__DEMO mdc-switch--checked"
          >
            <div
              class="mdc-switch__track"
            />
            <div
              class="mdc-switch__thumb-underlay"
            >
              <div
                class="mdc-switch__thumb"
              />
              <input
                aria-checked="true"
                class="mdc-switch__native-control"
                id="DEMO"
                role="switch"
                type="checkbox"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="material-wizard__card mdc-layout-grid__inner mdc-layout-grid__cell--align-middle"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4"
      >
        <img
          alt=""
          src="http://example.com/image.png"
        />
      </div>
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--align-middle"
      >
        <div>
          Example content
        </div>
      </div>
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--align-middle"
      >
        <div
          class="mdc-switch material-wizard-switch material-wizard-switch__DEMO mdc-switch--checked"
        >
          <div
            class="mdc-switch__track"
          />
          <div
            class="mdc-switch__thumb-underlay"
          >
            <div
              class="mdc-switch__thumb"
            />
            <input
              aria-checked="true"
              class="mdc-switch__native-control"
              id="DEMO"
              role="switch"
              type="checkbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Wizard: Card matches snapshot when contentSpan is set 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="material-wizard__card mdc-layout-grid__inner mdc-layout-grid__cell--align-middle"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4"
        >
          <img
            alt=""
            src="http://example.com/image.png"
          />
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--align-middle"
        />
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--align-middle"
        >
          <div
            class="mdc-switch material-wizard-switch material-wizard-switch__DEMO mdc-switch--checked"
          >
            <div
              class="mdc-switch__track"
            />
            <div
              class="mdc-switch__thumb-underlay"
            >
              <div
                class="mdc-switch__thumb"
              />
              <input
                aria-checked="true"
                class="mdc-switch__native-control"
                id="DEMO"
                role="switch"
                type="checkbox"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="material-wizard__card mdc-layout-grid__inner mdc-layout-grid__cell--align-middle"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4"
      >
        <img
          alt=""
          src="http://example.com/image.png"
        />
      </div>
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--align-middle"
      />
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--align-middle"
      >
        <div
          class="mdc-switch material-wizard-switch material-wizard-switch__DEMO mdc-switch--checked"
        >
          <div
            class="mdc-switch__track"
          />
          <div
            class="mdc-switch__thumb-underlay"
          >
            <div
              class="mdc-switch__thumb"
            />
            <input
              aria-checked="true"
              class="mdc-switch__native-control"
              id="DEMO"
              role="switch"
              type="checkbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Wizard: Card matches snapshot when imageSpan is set 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="material-wizard__card mdc-layout-grid__inner mdc-layout-grid__cell--align-middle"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6"
        >
          <img
            alt=""
            src="http://example.com/image.png"
          />
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--align-middle"
        />
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--align-middle"
        >
          <div
            class="mdc-switch material-wizard-switch material-wizard-switch__DEMO mdc-switch--checked"
          >
            <div
              class="mdc-switch__track"
            />
            <div
              class="mdc-switch__thumb-underlay"
            >
              <div
                class="mdc-switch__thumb"
              />
              <input
                aria-checked="true"
                class="mdc-switch__native-control"
                id="DEMO"
                role="switch"
                type="checkbox"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="material-wizard__card mdc-layout-grid__inner mdc-layout-grid__cell--align-middle"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6"
      >
        <img
          alt=""
          src="http://example.com/image.png"
        />
      </div>
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--align-middle"
      />
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--align-middle"
      >
        <div
          class="mdc-switch material-wizard-switch material-wizard-switch__DEMO mdc-switch--checked"
        >
          <div
            class="mdc-switch__track"
          />
          <div
            class="mdc-switch__thumb-underlay"
          >
            <div
              class="mdc-switch__thumb"
            />
            <input
              aria-checked="true"
              class="mdc-switch__native-control"
              id="DEMO"
              role="switch"
              type="checkbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Wizard: Card matches snapshot when switch is set 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="material-wizard__card mdc-layout-grid__inner mdc-layout-grid__cell--align-middle"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4"
        >
          <img
            alt=""
            src="http://example.com/image.png"
          />
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--align-middle"
        />
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--align-middle"
        >
          <div
            class="mdc-switch material-wizard-switch material-wizard-switch__DEMO mdc-switch--checked"
          >
            <div
              class="mdc-switch__track"
            />
            <div
              class="mdc-switch__thumb-underlay"
            >
              <div
                class="mdc-switch__thumb"
              />
              <input
                aria-checked="true"
                class="mdc-switch__native-control"
                id="DEMO"
                role="switch"
                type="checkbox"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="material-wizard__card mdc-layout-grid__inner mdc-layout-grid__cell--align-middle"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4"
      >
        <img
          alt=""
          src="http://example.com/image.png"
        />
      </div>
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--align-middle"
      />
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--align-middle"
      >
        <div
          class="mdc-switch material-wizard-switch material-wizard-switch__DEMO mdc-switch--checked"
        >
          <div
            class="mdc-switch__track"
          />
          <div
            class="mdc-switch__thumb-underlay"
          >
            <div
              class="mdc-switch__thumb"
            />
            <input
              aria-checked="true"
              class="mdc-switch__native-control"
              id="DEMO"
              role="switch"
              type="checkbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
